--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,9 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-size: 300% 300%;
   background-image: linear-gradient(
                   -45deg,
