--- a/src/portfolio.scss
+++ b/src/portfolio.scss
@@ -1,5 +1,10 @@
-.navi{
-  text-align: center;
+.portfolio-wrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  margin-left: 20px;
+  text-align: center;
+  min-height: 100vh;
 }
