--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,6 @@
 
 body {
   margin: 0;
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
@@ -12,31 +10,14 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-size: 300% 300%;
-  background-image: linear-gradient(
-                  -45deg,
-                  rgb(92, 34, 34) 0%,
-                  rgb(31, 35, 71) 25%,
-                  rgb(89, 43, 109) 51%,
-                  rgb(99, 32, 53) 100%
-  );
-  animation: AnimateBG 15s ease infinite;
   overflow-x: hidden;
 }
 
-@keyframes AnimateBG {
-  0%{background-position:0 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0 50%}
-}
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 #root {
   width: 100%;
   height: 100%;
-
 }
